aligh design to be rtl

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,14 @@
           "./src/assets/css/demo.css"
             ],
             "scripts": [
-              "./node_modules/hammerjs/hammer.min.js"
+              "./node_modules/hammerjs/hammer.min.js",
+              "./node_modules/jquery/dist/jquery.js",
+              // "./node_modules/popper.js/dist/umd/popper.js",
+              "./node_modules/bootstrap-material-design/dist/js/bootstrap-material-design.min.js",
+              "./node_modules/arrive/src/arrive.js",
+              "./node_modules/moment/moment.js",
+              "./node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
+              "./node_modules/bootstrap-notify/bootstrap-notify.js"
             ]
           },
           "configurations": {
@@ -84,7 +91,16 @@
               "./src/assets/scss/material-dashboard.scss",
               "./src/assets/css/demo.css"
             ],
-            "scripts": ["./node_modules/hammerjs/hammer.min.js"],
+            "scripts": [
+              "./node_modules/hammerjs/hammer.min.js",
+              "./node_modules/jquery/dist/jquery.js",
+              // "./node_modules/popper.js/dist/umd/popper.js",
+              "./node_modules/bootstrap-material-design/dist/js/bootstrap-material-design.min.js",
+              "./node_modules/arrive/src/arrive.js",
+              "./node_modules/moment/moment.js",
+              "./node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js",
+              "./node_modules/bootstrap-notify/bootstrap-notify.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
