--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
             "scripts": [
               "./node_modules/hammerjs/hammer.min.js",
               "./node_modules/jquery/dist/jquery.js",
-              // "./node_modules/popper.js/dist/umd/popper.js",
+               "./node_modules/popper.js/dist/umd/popper.js",
               "./node_modules/bootstrap-material-design/dist/js/bootstrap-material-design.min.js",
               "./node_modules/arrive/src/arrive.js",
               "./node_modules/moment/moment.js",
@@ -94,7 +94,7 @@
             "scripts": [
               "./node_modules/hammerjs/hammer.min.js",
               "./node_modules/jquery/dist/jquery.js",
-              // "./node_modules/popper.js/dist/umd/popper.js",
+              "./node_modules/popper.js/dist/umd/popper.js",
               "./node_modules/bootstrap-material-design/dist/js/bootstrap-material-design.min.js",
               "./node_modules/arrive/src/arrive.js",
               "./node_modules/moment/moment.js",
