--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
+    "npm": "^6.4.0",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
