--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@material/list": "^0.39.1",
     "ajv": "^6.5.3",
     "arrive": "^2.4.1",
     "bootstrap": "^4.1.3",
